fixed opacity on safari and clickablity

--- a/src/app/main/audio/audio.component.css
+++ b/src/app/main/audio/audio.component.css
@@ -22,6 +22,7 @@ audio{
   
   
   .pulse {
+    z-index:98;
     position:absolute;
     text-align: center;
     top: var(--pulse-listener-top); 
@@ -30,12 +31,21 @@ audio{
     height: var(--pulse-listener-height); 
     border-radius: 50%;
     background: #c6636c;
-    opacity:.6;
+    opacity: 0.6 !important; /* Standard compliant browsers */
+    -moz-opacity: 0.6 !important; /* Firefox and Mozilla browsers */
+    -webkit-opacity: 0.6 !important; /* WebKit browser e.g. Safari */
+    filter: alpha(opacity=60); /* For IE8 and earlier */
     cursor: pointer;
     box-shadow: 0 0 0 rgba(255, 165, 173, 0.712);
+    -webkit-animation: pulse 2s infinite;
+    -moz-animation: pulse 2s infinite;
+    -o-animation: pulse 2s infinite;
     animation: pulse 2s infinite;
   }
   .pulse:hover {
+    -webkit-animation: none;
+    -moz-animation: none;
+    -o-animation: none;
     animation: none;
     background: #c6636c;
     opacity:.8;
